Add getting started and screenshots sections